gccida/g0/find_mem_givs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_mem_givs/src/loop.c:5899:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+58h] [rbp-28h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_mem_givs/src/loop.c:5899:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+58h] [rbp-28h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_mem_givs/src/loop.c:5900:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+64h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_mem_givs/src/loop.c:5932:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2)) ) 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_mem_givs/src/loop.c:5934:1: error: use of undeclared identifier 'v'
v = ( induction_1 *)xmalloc( 0xA8uLL); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_mem_givs/src/loop.c:5934:20: error: expected expression
v = ( induction_1 *)xmalloc( 0xA8uLL); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_mem_givs/src/loop.c:5934:7: error: use of undeclared identifier 'induction_1'
v = ( induction_1 *)xmalloc( 0xA8uLL); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_mem_givs/src/loop.c:5937:1: error: use of undeclared identifier 'v'
v, 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_mem_givs/src/loop.c:5949:1: error: use of undeclared identifier 'v'
v->mem = x; 
^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_mem_givs/src/obj/loop.o] Error 1
